--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
         "SESSION_ID": {
             "description": "Type the Session-ID you got from pair or scan qr.",
             "required": true,
-            "value": "put session id here"
+            "value": "Manu-MD&eJcSkQpI#aSqrn6jC5FnbD486zwgSHYLgJuYBTabbdOhwM-zMiWE"
         }
     },
     "buildpacks": [
